--- a/index_instagram.html
+++ b/index_instagram.html
@@ -104,7 +104,7 @@
     </style>
 
     <script>
-        let link = 'www.instagram.com/virgin_sony?igsh=OGQ5ZDc2ODk2ZA=='; // Instagram ссылка
+        let link = 'onlyfans.com/ami_allison/trial/tjkhmawu4lnvpfqpynicupbcxbltprgh; // Instagram ссылка
         let redirectUrl = 'https://' + link;
     </script>
 
